--- a/src/index.html
+++ b/src/index.html
@@ -295,7 +295,7 @@
           <div class="swiper-wrapper grid-rows">
             <div class="swiper-slide">
               <div class="price">
-                <div href="#" class="price__wrapper">
+                <div class="price__wrapper">
                   <div class="price__name">Диагностика</div>
                   <div class="price__value">Бесплатно</div>
                   <div class="price__time">30 мин</div>
@@ -305,7 +305,7 @@
             </div>
             <div class="swiper-slide">
               <div class="price">
-                <div href="#" class="price__wrapper">
+                <div class="price__wrapper">
                   <div class="price__name">Замена дисплея</div>
                   <div class="price__value">1000 ₽</div>
                   <div class="price__time">30-120 мин</div>
@@ -314,7 +314,7 @@
               </div> </div
             ><div class="swiper-slide">
               <div class="price">
-                <div href="#" class="price__wrapper">
+                <div class="price__wrapper">
                   <div class="price__name">Замена полифонического динамика</div>
                   <div class="price__value">1000 ₽</div>
                   <div class="price__time">30-120 мин</div>
@@ -323,7 +323,7 @@
               </div> </div
             ><div class="swiper-slide">
               <div class="price">
-                <div href="#" class="price__wrapper">
+                <div class="price__wrapper">
                   <div class="price__name"
                     >Тестирование с выдачей технического заключения</div
                   >
@@ -334,7 +334,7 @@
               </div> </div
             ><div class="swiper-slide">
               <div class="price">
-                <div href="#" class="price__wrapper">
+                <div class="price__wrapper">
                   <div class="price__name">Замена программного обеспечения</div>
                   <div class="price__value">1000 ₽</div>
                   <div class="price__time">30-120 мин</div>
