--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           <div class="swiper-wrapper grid-rows">
             <div class="swiper-slide">
               <div class="price">
-                <div href="#" class="price__wrapper">
+                <div class="price__wrapper">
                   <div class="price__name">Диагностика</div>
                   <div class="price__value">Бесплатно</div>
                   <div class="price__time">30 мин</div>
@@ -300,7 +300,7 @@
             </div>
             <div class="swiper-slide">
               <div class="price">
-                <div href="#" class="price__wrapper">
+                <div class="price__wrapper">
                   <div class="price__name">Замена дисплея</div>
                   <div class="price__value">1000 ₽</div>
                   <div class="price__time">30-120 мин</div>
@@ -308,7 +308,7 @@
                 </div>
               </div> </div><div class="swiper-slide">
               <div class="price">
-                <div href="#" class="price__wrapper">
+                <div class="price__wrapper">
                   <div class="price__name">Замена полифонического динамика</div>
                   <div class="price__value">1000 ₽</div>
                   <div class="price__time">30-120 мин</div>
@@ -316,7 +316,7 @@
                 </div>
               </div> </div><div class="swiper-slide">
               <div class="price">
-                <div href="#" class="price__wrapper">
+                <div class="price__wrapper">
                   <div class="price__name">Тестирование с выдачей технического заключения</div>
                   <div class="price__value">1000 ₽</div>
                   <div class="price__time">30-120 мин</div>
@@ -324,7 +324,7 @@
                 </div>
               </div> </div><div class="swiper-slide">
               <div class="price">
-                <div href="#" class="price__wrapper">
+                <div class="price__wrapper">
                   <div class="price__name">Замена программного обеспечения</div>
                   <div class="price__value">1000 ₽</div>
                   <div class="price__time">30-120 мин</div>
